more bugs squashed, mobile and tablet responsivness fixed

--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -36,3 +36,31 @@
     vertical-align: middle;
     text-decoration: none;
   }
+
+  @media only screen and (max-width: 800px) {
+    .inner-footer {
+      width: 100vw;
+      vertical-align: middle;
+      background-color: black;
+      height: 50px;
+      margin-top: 5em;
+      color: white;
+      display: table;
+      font-family: 'Times New Roman', Times, sans-serif;
+      font-size: 20px;
+    }
+}
+
+@media only screen and (max-width: 400px) {
+  .inner-footer {
+    width: 100vw;
+    vertical-align: middle;
+    background-color: black;
+    height: 50px;
+    margin-top: 5em;
+    color: white;
+    display: table;
+    font-family: 'Times New Roman', Times, sans-serif;
+    font-size: 20px;
+  }
+}
