--- a/src/containers/Musical/Home/Home.module.css
+++ b/src/containers/Musical/Home/Home.module.css
@@ -2,4 +2,12 @@ body{
     margin: 0;
     padding: 0;
     height: 100vh;
+    text-decoration: none;
+}
+
+button{ 
+    justify-items: center;
+    color: blueviolet;
+    margin-left: 35%;
+    margin-right: 35%;
 }
